Refacto to fix sonarlint warning  and add TU